# chronos-foundry

./: .env.template  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  pyproject.toml  pytest.ini
aws/: README.md  requirements.txt
aws/cdk/: .gitignore  cdk.json  clean.sh  package.json  tsconfig.json  validate.sh
aws/scripts/: README.md  bootstrap.sh  cleanup.sh  kill_training.sh  launch_training.sh  monitor_training.sh  preflight_check.py  test_trainer.py  training_wrapper.py  upload_scripts.sh
docs/: README.md
docs/architecture/: README.md  cdk-implementation.md  future-enhancements.md  overview.md  requirements.md  state-machine.md  system-architecture.md  training-orchestration.md
docs/aws/: architecture-questions.md  index.md
docs/getting-started/: README.md  aws-quickstart.md  installation.md  quick-example.md
docs/internal/: README.md  implementation_snapshot.md  incremental_trainer_operational_notes.md  test-coverage-todo.md
docs/user-guides/: README.md  testing.md  usage-guide.md
scripts/: min_parquet_tsdf_probe.py
src/chronos_trainer/: __init__.py  cli.py
src/chronos_trainer/core/: __init__.py  config_helpers.py  config_provider.py  logging_manager.py
src/chronos_trainer/data/: __init__.py  data_buffer.py  data_converter.py  resumable_loader.py
src/chronos_trainer/metrics/: __init__.py  finalizer.py  local_sink.py  publisher.py  recorder.py  resource_sampler.py  schemas.py
tests/: __init__.py  test_basic.py  test_checkpoint_manager.py  test_incremental_trainer.py  test_resumable_loader.py
(+15 files in other folders)
